# blueprinter-app

./: .env.example  .gitignore  CLI_README.md  CODING_PREFERENCES_README.md  FETCH_HISTORY_QUICKSTART.md  FETCH_HISTORY_README.md  IMPLEMENTATION_SUMMARY.md  README.md  env.example  package-lock.json  package.json  run_all.sh  run_backend.sh  run_frontend.sh  setup_cli.py  setup_env.py  setup_supabase_env.sh
backend/: pyproject.toml
backend/app/: __init__.py  local_storage.py  main.py  models.py  openai_client.py  security.py  supabase_client.py
backend/app/api/: dependencies.py
backend/app/api/routes/: ask.py  coding_preferences.py  cursor_link.py  fetch_history.py  plan.py  plan_patch.py
backend/app/langgraph/: __init__.py  graph.py
backend/app/middleware/: __init__.py  fetch_tracker.py
backend/app/services/: embedding_service.py  pattern_learning_service.py
backend/app/utils/: json_patch.py
backend/blueprinter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/cli/: __init__.py  main.py
cli/: main.py  utils.py
cursor-extension/: README.md  package.json
cursor-extension/src/: extension.ts
examples/: cli_demo.py  coding_preferences_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AskCopilotModal.tsx  CodingPreferencesManager.tsx  FetchHistoryViewer.tsx  PlanViewer.tsx  Toast.tsx
frontend/src/lib/: supabase.ts
frontend/src/services/: api.ts  codingPreferences.ts  fetchHistory.ts
supabase/: config.toml  policies.sql  schema.sql
supabase/functions/analyze_repo/: deno.json  index.ts
supabase/migrations/: 20241004_fetch_history.sql  20241220_coding_preferences.sql
